# diplom10

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
todolist/: settings.py  urls.py
todolist/bot/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_tg_user_model.py
todolist/bot/tg/: client.py  schemas.py
todolist/core/: admin.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/core/tests/: test_api.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_alter_goal_priority_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
todolist/goals/tests/: test_api_boards.py  test_api_category.py  test_api_comments.py  test_api_goal.py
